--- a/app/src/main/res/layout/activity_bottombar.xml
+++ b/app/src/main/res/layout/activity_bottombar.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,7 +25,7 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/listView"
+            android:id="@+id/lvPosts"
             android:layout_gravity="center_horizontal" />
     </LinearLayout>
 
@@ -35,8 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/searchLayout"
-        android:visibility="invisible"
-        android:layout_above="@id/homeLayout">
+        android:visibility="invisible">
 
         <TextView
             android:layout_width="match_parent"
@@ -49,8 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/notificationLayout"
-        android:visibility="invisible"
-        android:layout_above="@id/homeLayout">
+        android:visibility="invisible">
 
         <TextView
             android:layout_width="match_parent"
@@ -63,8 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/profileLayout"
-        android:visibility="invisible"
-        android:layout_above="@id/homeLayout">
+        android:visibility="invisible">
 
         <TextView
             android:layout_width="match_parent"
@@ -72,4 +68,4 @@
             android:text="Profile"/>
     </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
