--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,13 +1,25 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cm.com.newdon.fragments.HomeFragment">
+    android:id="@+id/homeLayout"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Altru Home"/>
 
-</FrameLayout>
+    <ImageView
+    android:layout_width="match_parent"
+    android:layout_height="15dp"
+    android:id="@+id/imageView"
+    android:layout_gravity="center_horizontal" />
+
+    <ListView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/lvPosts"
+    android:layout_gravity="center_horizontal" />
+
+</LinearLayout>
