--- a/app/src/main/res/layout/activity_foundation_grid.xml
+++ b/app/src/main/res/layout/activity_foundation_grid.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="cm.com.newdon.FoundationGrid"
     android:weightSum="100">
-
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="85.3dp"
+        android:background="@color/lightBlue">
+    </LinearLayout>
+    
     <EditText
         android:layout_width="match_parent"
         android:layout_height="0dp"
