--- a/app/src/main/res/layout/foundation.xml
+++ b/app/src/main/res/layout/foundation.xml
@@ -9,9 +9,9 @@
         android:layout_height="60dp">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imFound"
+            android:layout_width="132dp"
+            android:layout_height="132dp"
+            android:id="@+id/imFoundLogo"
             android:layout_gravity="center_horizontal" />
 
     </RelativeLayout>
@@ -20,15 +20,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/txFoundCategory"
+        android:text="Category"
+        android:textSize="14.7sp"
+        android:id="@+id/txFoundCategoryName"
         android:layout_gravity="center_horizontal" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/tvFoundName"
+        android:text="Foundation Title"
+        android:textSize="22.7sp"
+        android:id="@+id/tvFoundTitle"
+        android:layout_gravity="center_horizontal" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Foundation Adress"
+        android:textColor="#5f5f5f"
+        android:textSize="14.7sp"
+        android:id="@+id/tvFoundAdress"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
