--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,6 +10,18 @@
     android:layout_height="wrap_content"
     android:text="Altru Home"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="getPostWithImage"
+        android:onClick="getPostWithImage"
+        android:id="@+id/btnGet"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imTest"/>
+
     <ImageView
     android:layout_width="match_parent"
     android:layout_height="15dp"
