--- a/app/src/main/res/layout/activity_donate.xml
+++ b/app/src/main/res/layout/activity_donate.xml
@@ -3,21 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context="cm.com.newdon.DonateActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="62.7dp"
+        android:layout_height="@dimen/header_hight"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="#5d9bff"
+        android:background="@color/lightBlue"
         android:id="@+id/relativeLayout">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/page_indicator"
+            android:src="@drawable/page_indicator2"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
     </RelativeLayout>
