--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,28 +5,18 @@
     android:id="@+id/homeLayout"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Altru Home"/>
-
-    <Button
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="getPostWithImage"
-        android:onClick="getPostWithImage"
-        android:id="@+id/btnGet"/>
+        android:layout_height="@dimen/header_hight"
+        android:background="@color/white">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imTest"/>
-
-    <ImageView
-    android:layout_width="match_parent"
-    android:layout_height="15dp"
-    android:id="@+id/imageView"
-    android:layout_gravity="center_horizontal" />
+        <ImageView
+            android:layout_width="103dp"
+            android:src="@drawable/editmeandsave"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
 
     <ListView
     android:layout_width="match_parent"
