--- a/app/src/main/res/layout/activity_make_don.xml
+++ b/app/src/main/res/layout/activity_make_don.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     xmlns:card="http://schemas.android.com/apk/res-auto"
     tools:context="cm.com.newdon.MakeDonActivity">
 
@@ -18,7 +19,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/page_indicator2"
+            android:src="@drawable/group_9"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
     </RelativeLayout>
@@ -31,6 +32,7 @@
         android:layout_marginLeft="@dimen/activity_vertical_margin"
         android:layout_marginRight="@dimen/activity_vertical_margin"
         android:layout_marginTop="10.7dp"
+        android:background="@color/white"
         android:layout_below="@+id/relativeLayout"
         android:id="@+id/card_view">
 
@@ -38,6 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="19.3dp"
+            android:background="@color/white"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp">
 
@@ -77,6 +80,46 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:layout_height="108dp"
+        android:layout_below="@+id/card_view">
+
+        <ImageView
+            android:layout_width="84dp"
+            android:layout_height="84dp"
+            android:src="@drawable/coin5"
+            android:onClick="coin5"
+            android:id="@+id/coin5"
+            android:layout_centerVertical="true"/>
+
+        <ImageView
+            android:layout_width="92dp"
+            android:layout_height="92dp"
+            android:src="@drawable/coin10"
+            android:onClick="coin10"
+            android:id="@+id/coin10"
+            android:layout_toRightOf="@id/coin5"
+            android:layout_centerVertical="true"/>
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/coin18"
+            android:onClick="coin18"
+            android:id="@+id/coin18"
+            android:layout_toRightOf="@+id/coin10"
+            android:layout_centerVertical="true" />
+
+        <ImageView
+            android:layout_width="108dp"
+            android:layout_height="108dp"
+            android:src="@drawable/coin50"
+            android:onClick="coin50"
+            android:layout_toRightOf="@id/coin18"
+            android:layout_centerVertical="true"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="97.3dp"
         android:background="@color/grey"
         android:onClick="makeDone"
@@ -92,5 +135,7 @@
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
     </RelativeLayout>
+
+
 
 </RelativeLayout>
