--- a/app/src/main/res/layout/foundation.xml
+++ b/app/src/main/res/layout/foundation.xml
@@ -1,46 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="284dp"
+    android:background="@color/white">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp">
+    <ImageView
+        android:layout_width="132dp"
+        android:layout_height="132dp"
+        android:id="@+id/imFoundLogo"
+        android:layout_marginTop="36dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"/>
 
-        <ImageView
-            android:layout_width="132dp"
-            android:layout_height="132dp"
-            android:id="@+id/imFoundLogo"
-            android:layout_gravity="center_horizontal" />
-
-    </RelativeLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imFoundationInfo"
+        android:src="@drawable/info"
+        android:layout_marginTop="25.3dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="8.7dp"
+        android:layout_alignParentRight="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Category"
         android:textSize="14.7sp"
         android:id="@+id/txFoundCategoryName"
-        android:layout_gravity="center_horizontal" />
+        android:layout_below="@+id/imFoundLogo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Foundation Title"
         android:textSize="22.7sp"
         android:id="@+id/tvFoundTitle"
-        android:layout_gravity="center_horizontal" />
+        android:maxLength="20"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/txFoundCategoryName"
+        android:layout_marginTop="18.7dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Foundation Adress"
         android:textColor="#5f5f5f"
         android:textSize="14.7sp"
         android:id="@+id/tvFoundAdress"
-        android:layout_gravity="center_horizontal" />
-</LinearLayout>
+        android:maxLength="30"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:layout_marginTop="4.7dp"
+        android:layout_below="@+id/tvFoundTitle"
+        android:layout_centerHorizontal="true" />
+</RelativeLayout>
