--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -1,136 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp">
-
+    android:layout_height="match_parent"
+    android:padding="@dimen/activity_horizontal_margin"
+    android:background="@color/white">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="53.3dp"
+            android:layout_height="53.3dp"
             android:id="@+id/ivUser"
             android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentLeft="true" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="User Name"
+            android:text="User"
             android:id="@+id/tvUserName"
+            android:textColor="@color/black"
+            android:textSize="18.7sp"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/ivUser"
+            android:layout_marginLeft="14dp"
             android:layout_toEndOf="@+id/ivUser" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="made a Don"
+            android:textSize="18.7sp"
+            android:textColor="@color/black"
             android:id="@+id/txMadeDon"
             android:layout_below="@+id/tvUserName"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignLeft="@+id/tvUserName"
+            android:layout_alignStart="@+id/tvUserName" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Yesterday"
+            android:textSize="13.3sp"
             android:id="@+id/tvDate"
-            android:layout_centerVertical="true"
+            android:layout_alignTop="@+id/txMadeDon"
             android:layout_toRightOf="@+id/txMadeDon"
-            android:layout_toEndOf="@+id/txMadeDon"
-            android:layout_marginLeft="54dp"
-            android:layout_marginStart="54dp" />
+            android:layout_marginLeft="3dp" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/ivOptions"
+            android:src="@drawable/options_btn"
             android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentRight="true" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
+            android:text="Category"
             android:id="@+id/tvCategory"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-    </RelativeLayout>
+            android:layout_alignBottom="@+id/tvUserName"
+            android:layout_toLeftOf="@+id/ivOptions"
+            android:layout_marginRight="10dp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Comment"
-        android:id="@+id/tvComment" />
+        android:textSize="20sp"
+        android:id="@+id/tvComment"
+        android:layout_below="@+id/ivUser"
+        android:layout_marginTop="10dp" />
 
     <ImageView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ivPost"
+        android:layout_below="@+id/tvComment"
         android:layout_gravity="center_horizontal" />
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_below="@+id/ivPost"
+        android:layout_height="70dp">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/layer_5"
-            android:id="@+id/ivLike" />
+            android:id="@+id/ivLike"
+            android:layout_centerVertical="true"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/layer_4"
-            android:id="@+id/ivComment" />
+            android:id="@+id/ivComment"
+            android:layout_toRightOf="@+id/ivLike"
+            android:layout_marginLeft="29dp"
+            android:layout_centerVertical="true"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/layer_3"
-            android:id="@+id/ivShare" />
+            android:id="@+id/ivShare"
+            android:layout_toRightOf="@+id/ivComment"
+            android:layout_marginLeft="33dp"
+            android:layout_centerVertical="true"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/coin"
-            android:id="@+id/ivCoin" />
+            android:id="@+id/ivCoin"
+            android:layout_marginRight="18dp"
+            android:layout_toLeftOf="@+id/tvDonated"
+            android:layout_centerVertical="true" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="63dp"
             android:layout_height="wrap_content"
             android:text="0 donated"
-            android:id="@+id/tvDonated" />
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Be the first who ? it"
-            android:id="@+id/tvLikeStatus" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="1 comment"
-            android:id="@+id/tvComments"
+            android:textColor="@color/black"
+            android:textAlignment="center"
+            android:id="@+id/tvDonated"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="41dp" />
+            android:layout_centerVertical="true" />
     </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
