--- a/app/src/main/res/xml/bottom_bar.xml
+++ b/app/src/main/res/xml/bottom_bar.xml
@@ -2,16 +2,16 @@
 <tabs>
     <tab
         id="@+id/bottomBarHome"
-        icon="@android:drawable/ic_dialog_info" />
+        icon="@drawable/shape_3" />
     <tab
         id="@+id/bottomBarSearch"
-        icon="@android:drawable/ic_dialog_info" />
+        icon="@drawable/shape_4" />
     <tab
         id="@+id/bottomBarDonate"
         icon="@android:drawable/ic_dialog_info" />
     <tab
         id="@+id/bottomBarNotification"
-        icon="@android:drawable/ic_dialog_info" />
+        icon="@drawable/shape_6" />
     <tab
         id="@+id/bottomBarProfile"
         icon="@android:drawable/ic_dialog_info" />
