--- a/app/src/main/res/layout/facebook.xml
+++ b/app/src/main/res/layout/facebook.xml
@@ -7,9 +7,20 @@
     <com.facebook.login.widget.LoginButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/view"
+        android:id="@+id/fbLogin"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        style="@style/FacebookLoginButton"/>
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/profile_image"
+        android:layout_below="@+id/fbLogin"
+        android:layout_centerHorizontal="true"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:src="@drawable/vector_smart_object"
+        app:civ_border_width="2dp"
+        app:civ_border_color="#FF000000"/>
 
 </RelativeLayout>
