--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -66,6 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Comment"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:id="@+id/tvComment"
         android:layout_below="@+id/ivUser"
