--- a/app/src/main/res/layout/activity_make_don.xml
+++ b/app/src/main/res/layout/activity_make_don.xml
@@ -4,138 +4,164 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    xmlns:card="http://schemas.android.com/apk/res-auto"
     tools:context="cm.com.newdon.MakeDonActivity">
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="62.7dp"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="#5d9bff"
-        android:id="@+id/relativeLayout">
+        android:layout_alignParentTop="true"
+        android:background="#5d9bff">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/group_9"
+            android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
+            android:src="@drawable/group_9" />
     </RelativeLayout>
 
-    <android.support.v7.widget.CardView
+    <RelativeLayout
+        android:id="@+id/paymentLayout"
         android:layout_width="468dp"
         android:layout_height="156dp"
-        card:cardElevation="2dp"
-        card:cardUseCompatPadding="true"
-        android:layout_marginLeft="@dimen/activity_vertical_margin"
-        android:layout_marginRight="@dimen/activity_vertical_margin"
-        android:layout_marginTop="10.7dp"
-        android:background="@color/white"
         android:layout_below="@+id/relativeLayout"
-        android:id="@+id/card_view">
+        android:layout_marginBottom="19.3dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/rectangle_46"
+        android:padding="16dp">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="19.3dp"
+
+
+        <EditText
+            android:id="@+id/etAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
             android:background="@color/white"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp">
+            android:inputType="number"
+            android:cursorVisible="false"
+            android:text="₪5"
+            android:textColor="@color/black"
+            android:textSize="80sp" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="16dp"
+            android:background="@color/grey" />
 
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="₪5"
-                android:background="@color/white"
-                android:textSize="80sp"
-                android:textColor="@color/black"
-                android:id="@+id/etAmount"
-                android:cursorVisible="false"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:text="AMOUNT TO DONATE"
+            android:textColor="@color/lightgrey"
+            android:textSize="12sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="AMOUNT TO DONATE"
-                android:textColor="@color/lightgrey"
-                android:textSize="12sp"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true" />
+        <TextView
+            android:id="@+id/tvFoundTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:text="Foundation"
+            android:textColor="@color/lightgrey"
+            android:textSize="12sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Foundation"
-                android:id="@+id/tvFoundTitle"
-                android:textColor="@color/lightgrey"
-                android:textSize="12sp"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true" />
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
+        <View
+            android:layout_width="88dp"
+            android:layout_height="24dp"
+            android:layout_alignParentTop="true"
+            android:background="#f7f7f7" />
+
+        <View
+            android:layout_width="64dp"
+            android:layout_height="8dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="26dp"
+            android:background="#f7f7f7" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/shape_24" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:onClick="clearAmount"
+            android:src="@drawable/shape_26" />
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="108dp"
-        android:layout_below="@+id/card_view">
+        android:layout_below="@+id/paymentLayout">
 
         <ImageView
+            android:id="@+id/coin5"
             android:layout_width="84dp"
             android:layout_height="84dp"
-            android:src="@drawable/coin5"
+            android:layout_centerVertical="true"
             android:onClick="coin5"
-            android:id="@+id/coin5"
-            android:layout_centerVertical="true"/>
+            android:src="@drawable/coin5" />
 
         <ImageView
+            android:id="@+id/coin10"
             android:layout_width="92dp"
             android:layout_height="92dp"
-            android:src="@drawable/coin10"
-            android:onClick="coin10"
-            android:id="@+id/coin10"
+            android:layout_centerVertical="true"
             android:layout_toRightOf="@id/coin5"
-            android:layout_centerVertical="true"/>
+            android:onClick="coin10"
+            android:src="@drawable/coin10" />
 
         <ImageView
+            android:id="@+id/coin18"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/coin18"
-            android:onClick="coin18"
-            android:id="@+id/coin18"
+            android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/coin10"
-            android:layout_centerVertical="true" />
+            android:onClick="coin18"
+            android:src="@drawable/coin18" />
 
         <ImageView
             android:layout_width="108dp"
             android:layout_height="108dp"
-            android:src="@drawable/coin50"
-            android:onClick="coin50"
+            android:layout_centerVertical="true"
             android:layout_toRightOf="@id/coin18"
-            android:layout_centerVertical="true"/>
+            android:onClick="coin50"
+            android:src="@drawable/coin50" />
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="97.3dp"
-        android:background="@color/grey"
-        android:onClick="makeDone"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true"
+        android:background="@color/grey"
+        android:onClick="makeDone">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Make a Don!"
-            android:textSize="28sp"
-            android:textColor="@color/white"
+            android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
+            android:text="Make a Don!"
+            android:textColor="@color/white"
+            android:textSize="28sp" />
     </RelativeLayout>
-
 
 
 </RelativeLayout>
