Images in main activit

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -86,6 +86,7 @@
                 <ToggleButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/privacyToggle"
                     android:background="@drawable/toggle_me"
                     android:layout_alignParentRight="true"/>
             </RelativeLayout>
